# microsvc-k3s

./: .gitignore  README.md
scraper/: Cargo.toml
scraper/migrations/: 20231004015008_schema.sql
src/: requests.txt
src/auth/: Dockerfile  schema.sql  server.py
src/auth/manifests/: deploy.yaml
src/auth/templates/: base.html
src/converter/: Dockerfile  consumer.py  requirements.txt
src/converter/convert/: mp3converter.py
src/converter/manifests/: deploy.yaml  secret.yaml
src/gateway/: Dockerfile  server.py
src/gateway/auth/: validate.py
src/gateway/auth_svc/: access.py
src/gateway/manifests/: deploy.yaml  ingress.yaml
src/gateway/storage/: util.py
src/rabbit/manifests/: pvc.yaml
src/scraper/src/: main.rs
video-mp3/auth/: data.db  requirements.txt
video-mp3/auth/templates/: base.html  index.html
video-mp3/converter/: consumer.py
video-mp3/gateway/: requirements.txt  server.py
video-mp3/gateway/auth/: validate.py
video-mp3/gateway/manifests/: service.yaml
video-mp3/rabbit/manifests/: stateful.yaml
