[package]
name = "scrapper"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = "0.4.31"
reqwest = "0.11.22"
scraper = "0.17.1"
shuttle-runtime = "0.28.0"
shuttle-shared-db = { version = "0.28.0", features = ["postgres"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1"
tracing = "0.1.37"
